# codeclippy

./: Cargo.toml  README.rst
src/: file_visitor.rs  files.rs  function_visitor.rs  helpers.rs  lib.rs  main.rs  map.rs  populate.rs  print_config.rs  registry.rs  rust_types.rs  tree.rs
src/cli/: ls.rs  ls_handler.rs  mod.rs
src/localfs/: file_path.rs  files.rs  mod.rs
src/tree/: builder.rs  dependencies.rs  dependents.rs  initialize.rs  local_registry.rs  mod.rs  root.rs  tree.rs
src/tree/dependents/: extract_dependents.rs  find_dependents.rs  mod.rs
src/types/: format.rs  mod.rs  rust_enum.rs  rust_function.rs  rust_impl.rs  rust_struct.rs  rust_trait.rs  rust_type.rs  visibility.rs
src/writers/: buffered.rs  clipboard.rs  mod.rs  stdout.rs
