[package]
name = "codeclippy"
version = "0.0.1"
edition = "2021"

[lib]
name = "codeclippy"
path = "src/lib.rs"

[[bin]]
name = "codeclippy"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["default", "full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
env_logger = "0.9"
log = "0.4"
clap = { version = "4.2" , default-features = false, features = ["std", "help"]}
