[package]
name = "codeclippy"
version = "0.0.1"
edition = "2021"

description = "Codeclippy is a utility to scan, map, and search code objects."
documentation = "https://docs.rs/codeclippy"
repository = "https://github.com/aprxi/codeclippy"
readme = "README.rst"
license = "MIT"

[lib]
name = "codeclippy"
path = "src/lib.rs"

[[bin]]
name = "codeclippy"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["default", "full", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
env_logger = "0.10"
log = "0.4"
clap = { version = "4.2" , default-features = false, features = ["std", "help"]}
